test/fixtures/fixtures/type-error/decorators.lys.ast.desugar
|-Document(0,303)
  |-FunctionDirective(0,28)
    |-Decorators(0,10)
      |-Decorator(0,10)
        |-NameIdentifier(2,8)
          |-Identifier=inline
    |-FunDeclaration(10,28)
      |-FunctionName(14,15)
        |-NameIdentifier(14,15)
          |-Identifier=x
      |-TypeParameters(15,15)
        <Rule0>
      |-FunctionParamsList(15,17)
        |-(List)(16,16)
          <Rule0>
      |-ReturnType(17,24)
        |-Reference(19,23)
          |-QName(19,23)
            |-NameIdentifier(19,23)
              |-Identifier=void
      |-FunctionBody(24,28)
        |-CodeBlock(26,28)
          <Rule0>
  |-FunctionDirective(30,58)
    |-Decorators(30,37)
      |-Decorator(30,37)
        |-NameIdentifier(32,35)
          |-Identifier=asd
    |-FunDeclaration(37,58)
      |-FunctionName(41,45)
        |-NameIdentifier(41,45)
          |-Identifier=test
      |-TypeParameters(45,45)
        <Rule0>
      |-FunctionParamsList(45,47)
        |-(List)(46,46)
          <Rule0>
      |-ReturnType(47,54)
        |-Reference(49,53)
          |-QName(49,53)
            |-NameIdentifier(49,53)
              |-Identifier=void
      |-FunctionBody(54,58)
        |-CodeBlock(56,58)
          <Rule0>
  |-FunctionDirective(60,91)
    |-Decorators(60,70)
      |-Decorator(60,70)
        |-NameIdentifier(62,68)
          |-Identifier=export
    |-FunDeclaration(70,91)
      |-FunctionName(74,78)
        |-NameIdentifier(74,78)
          |-Identifier=main
      |-TypeParameters(78,78)
        <Rule0>
      |-FunctionParamsList(78,80)
        |-(List)(79,79)
          <Rule0>
      |-ReturnType(80,87)
        |-Reference(82,86)
          |-QName(82,86)
            |-NameIdentifier(82,86)
              |-Identifier=void
      |-FunctionBody(87,91)
        |-CodeBlock(89,91)
          <Rule0>
  |-FunctionDirective(93,129)
    |-Decorators(93,107)
      |-Decorator(93,107)
        |-NameIdentifier(95,101)
          |-Identifier=export
        |-NumberLiteral=123
    |-FunDeclaration(107,129)
      |-FunctionName(111,116)
        |-NameIdentifier(111,116)
          |-Identifier=test2
      |-TypeParameters(116,116)
        <Rule0>
      |-FunctionParamsList(116,118)
        |-(List)(117,117)
          <Rule0>
      |-ReturnType(118,125)
        |-Reference(120,124)
          |-QName(120,124)
            |-NameIdentifier(120,124)
              |-Identifier=void
      |-FunctionBody(125,129)
        |-CodeBlock(127,129)
          <Rule0>
  |-FunctionDirective(131,170)
    |-Decorators(131,148)
      |-Decorator(131,148)
        |-NameIdentifier(133,139)
          |-Identifier=export
        |-StringLiteral="test"
    |-FunDeclaration(148,170)
      |-FunctionName(152,157)
        |-NameIdentifier(152,157)
          |-Identifier=test3
      |-TypeParameters(157,157)
        <Rule0>
      |-FunctionParamsList(157,159)
        |-(List)(158,158)
          <Rule0>
      |-ReturnType(159,166)
        |-Reference(161,165)
          |-QName(161,165)
            |-NameIdentifier(161,165)
              |-Identifier=void
      |-FunctionBody(166,170)
        |-CodeBlock(168,170)
          <Rule0>
  |-FunctionDirective(172,207)
    |-Decorators(172,185)
      |-Decorator(172,185)
        |-NameIdentifier(174,180)
          |-Identifier=export
        |-StringLiteral=""
    |-FunDeclaration(185,207)
      |-FunctionName(189,194)
        |-NameIdentifier(189,194)
          |-Identifier=test4
      |-TypeParameters(194,194)
        <Rule0>
      |-FunctionParamsList(194,196)
        |-(List)(195,195)
          <Rule0>
      |-ReturnType(196,203)
        |-Reference(198,202)
          |-QName(198,202)
            |-NameIdentifier(198,202)
              |-Identifier=void
      |-FunctionBody(203,207)
        |-CodeBlock(205,207)
          <Rule0>
  |-FunctionDirective(209,256)
    |-Decorators(209,231)
      |-Decorator(209,231)
        |-NameIdentifier(211,217)
          |-Identifier=extern
        |-StringLiteral="asd"
        |-StringLiteral="dsa"
    |-FunDeclaration(231,256)
      |-FunctionName(235,243)
        |-NameIdentifier(235,243)
          |-Identifier=imported
      |-TypeParameters(243,243)
        <Rule0>
      |-FunctionParamsList(243,245)
        |-(List)(244,244)
          <Rule0>
      |-ReturnType(245,252)
        |-Reference(247,251)
          |-QName(247,251)
            |-NameIdentifier(247,251)
              |-Identifier=void
      |-FunctionBody(252,256)
        |-CodeBlock(254,256)
          <Rule0>
  |-FunctionDirective(260,303)
    |-Decorators(260,278)
      |-Decorator(260,278)
        |-NameIdentifier(262,268)
          |-Identifier=extern
        |-BooleanLiteral(269,274)
          <Rule0>
        |-NumberLiteral=1
    |-FunDeclaration(278,303)
      |-FunctionName(282,290)
        |-NameIdentifier(282,290)
          |-Identifier=imported
      |-TypeParameters(290,290)
        <Rule0>
      |-FunctionParamsList(290,292)
        |-(List)(291,291)
          <Rule0>
      |-ReturnType(292,299)
        |-Reference(294,298)
          |-QName(294,298)
            |-NameIdentifier(294,298)
              |-Identifier=void
      |-FunctionBody(299,303)
        |-CodeBlock(301,303)
          <Rule0>
  |-EndOfFile=